--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ scale: 1.1;
     background-color: transparent;
 }
 
-#page1 h1{
+#page1>h1{
     font-size: 80px;
     left: 50%;
     top: 50%;
@@ -100,10 +100,11 @@ scale: 1.1;
     background-color: transparent;
     z-index: 99;
     font-weight: 500;
-    line-height: 85px;
+    line-height: 100px;
     text-align: center;
+
 }
-#page1 p{
+#page1 .p56{
     text-align: center;
     font-size: 25px;
     margin-top: 120px;
